2019-02-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Restore running the address book editor

	* src/meson.build: build the editor with the correct name:
	"balsa-ab", not "balsa_ab";
	* ui/balsa-ab.gresource.xml: use the correct prefix:
	"/org/desktop/BalsaAb", not "/org/desktop/Balsa".

2018-01-30  Albrecht Dreß  <albrecht.dress@arcor.de>

	LDAP address book: use all email attributes

	* libbalsa_address_book_ldap_get_address(): assign the GList
	  of all mail attribute strings to LibBalsaAddress instead of the
	  first one only;
	* lbabl_get_internet_address(): append separate InternetAddress
	  to a GList instead on returning the first one only.

2018-01-24  Albrecht Dreß  <albrecht.dress@arcor.de>

	* libbalsa/html.c (lbh_web_process_terminated_cb): new signal in
	  webkit version 2.20;
	  (libbalsa_html_new): do not auto-load images if any are
	  external (that is, not cid: data)
2019-01-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	More menu shuffling

	* ui/main-window.ui:
	  move "File → New → Message" to "Message → New…";
	  move  "Mailbox → Close" to the foot of the "Mailbox" menu, and
	  group "Remove Duplicates" and "Expunge Deleted Messages"
	  immediately above it;
	  move "Message → Next Message" and three friends to a new
	  "Go" top-level menu.

2019-01-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* ui/main-window.ui: Shuffle some menu items;
	see https://gitlab.gnome.org/GNOME/balsa/issues/14

2019-01-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* ui/main-window.ui: Restore 'm' shortcut for "New message"

2019-01-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove application menu

	GNOME has decided that application menus, shown in the top bar
	of the GNOME desktop, are a bad idea. It was kind of a stretch
	for Balsa to implement one, so it shouldn't be too hard to drop
	it.

	* src/main-window.c (settings_activated),
	(bw_add_win_action_entries), (balsa_window_add_action_entries),